# galley-pad

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  mise.toml  package-lock.json  package.json  playwright.config.ts  release.config.cjs  tsconfig.json  vite.config.ts
.githooks/: commit-msg  pre-commit
.github/workflows/: build-release.yml  semantic-release.yml
docs/: architecture.md  known-issues.md  product-principles.md  roadmap.md  vision.md
docs/plans/: stage-0-project-definition.md  stage-1-desktop-skeleton.md  stage-2-file-lifecycle.md  stage-3-desktop-integration.md  stage-4-editing-comfort.md  stage-5-packaging-and-daily-driver.md
docs/reference/: galley-editor.md
scripts/: build-macos-pkg.mjs  build-macos-pkg.test.mjs  check-conventional-commit.mjs  check-conventional-commit.test.mjs  install-git-hooks.mjs  prepare-galley-editor.mjs  prepare-galley-editor.test.mjs  release-automation.test.mjs  sync-release-version.mjs  sync-release-version.test.mjs  tauri-info.mjs  update-aur-package.mjs  update-aur-package.test.mjs  verify-fast.mjs  verify.mjs  with-timeout.mjs
src/: App.test.tsx  App.tsx  appInfo.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: galley-pad.desktop
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: scaffold.rs
src/components/: DocumentView.test.tsx  DocumentView.tsx  FontPicker.tsx  GalleyPadFooterMark.tsx
src/document/: lifecycle.test.ts  lifecycle.ts  session.test.ts  session.ts  (+2 more)
(+45 files in other folders)
